# Game

./: Cargo.toml
.cargo/: config.toml
assets/tiles/: stone.ase
learning/: background.rs  camera.rs  enemy.rs  hero.rs  loss.rs  main.rs
src/: enemy.rs  hero.rs  loss.rs  main.rs  score.rs  states.rs
src/camera/: mod.rs
src/main_menu/: mod.rs  styles.rs
src/main_menu/systems/: interactions.rs  layout.rs
src/map/: mapbuilder.rs  mod.rs  structs.rs
src/player/: components.rs  mod.rs
src/player/systems/: mod.rs  movement.rs  spawning.rs
src/procedural_generation/: chunk.rs  map.rs  mod.rs
