[package]
name = "fantasy"
version = "0.1.0"
edition = "2021"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3


[dependencies]
bevy = { version = "0.14.2", features = ["dynamic_linking"] }
rand = "0.8.5"
winit = "0.30.5"
bevy-inspector-egui = {git = "https://github.com/jakobhellermann/bevy-inspector-egui"}